don't state the obvious

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Ignore output of scraper
+# output of scraper
 data.sqlite
 
-# Ignore python cache files
+# python cache files
 __pycache__/
 *.pyc
 
-# Ignore Unit test coverage
+# unit test coverage
 .coverage
