--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 commitment
 cssselect==0.9.1
 lxml==3.6.4
+requests==2.13.0
 scraperwiki==0.5.1
 scrapy==1.4.0
 git+https://github.com/polling-bot-4000/polling-bot.git
