--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install -r requirements.txt
   - pip install -r testing_requirements.txt
 script:
-  - coverage run --source=scraper ./run_tests.py
+  - coverage run --source=boundary_bot/ ./run_tests.py
 after_success:
   - coveralls
